# rpi_adxl345_example

./: .gitignore  CMakeLists.txt  README.md  adxl345.c  adxl345.h  adxl345_bus.c  adxl345_bus.h  main.c
